# agno-playground

./: .env.sample  .gitignore  Modelfile  README.md  main.py  playground.py  pyproject.toml
agent-ui/: package-lock.json
agent-ui/src/: store.ts
agent-ui/src/api/: playground.ts  routes.ts
agent-ui/src/components/playground/ChatArea/ChatInput/: ChatInput.tsx
agent-ui/src/components/playground/ChatArea/Messages/: ActiveToolCalls.tsx  Messages.tsx
agent-ui/src/components/playground/ChatArea/Messages/ToolCallModal/: ToolCallModal.tsx  index.ts
agent-ui/src/components/playground/Sidebar/: Sidebar.tsx  TeamMembers.tsx  TeamSelector.tsx
agent-ui/src/components/playground/Sidebar/Sessions/: SessionItem.tsx  Sessions.tsx
agent-ui/src/components/ui/: toggle.tsx
agent-ui/src/components/ui/icon/: constants.tsx  types.ts
agent-ui/src/components/ui/typography/MarkdownRenderer/: inlineStyles.tsx  styles.tsx
agent-ui/src/hooks/: useAIStreamHandler.tsx  useChatActions.ts
agent-ui/src/types/: playground.ts
agents/: __init__.py  academic_researcher.py  article_reader.py  hn_researcher.py  reddit_researcher.py  web_searcher.py
api/: openai_router.py
config/: __init__.py  environment.py
knowledge/: __init__.py  arxiv.py
models/: __init__.py
storage/: __init__.py  config.py
teams/: __init__.py  hackernews.py  research.py
