[project]
name = "agno-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.5.1",
    "aiohttp>=3.11.18",
    "anthropic>=0.51.0",
    "azure-ai-inference>=1.0.0b9",
    "duckduckgo-search>=8.0.2",
    "fastapi[standard]>=0.115.12",
    "lxml-html-clean>=0.4.2",
    "lxml[clean]>=5.4.0",
    "newspaper4k>=0.9.3.1",
    "ollama>=0.4.8",
    "openai>=1.79.0",
    "sqlalchemy>=2.0.41",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "certifi>=2025.4.26",
]
